src/snapshots/jjpwrgem__cli__tests__unexpected_character.snap
---
source: src/cli.rs
expression: annotated
---
error: unexpected character `ğŸ¦€`. expected start of a json value
 --> stdin:1:1
  |
1 | ğŸ¦€
  | ^^
